--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                   <option>ST6</option>
                   <option>ST7</option>
                   <option>ST8</option>
+                  <option>Consultant</option>
 
                 </select>
                 <h3 class="mt-4">Hours Worked</h1>
